fix: adjust shoping cart overflow

--- a/css/cart.css
+++ b/css/cart.css
@@ -1,7 +1,7 @@
 .cart {
   max-width: 400px;
   min-width: 320px;
-  position: fixed;
+  position: absolute;
   z-index: 230;
   top: 0;
   right: 0;
@@ -13,6 +13,7 @@
   border-bottom-left-radius: 10px;
   transition: 0.6s all ease;
   transform: translateY(-200%);
+  overflow-y: scroll;
 }
 
 .cart_open {
